--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.1.7
   google_fonts: 2.2.0
   permission_handler: ^10.2.0
+  # cloud_functions: ^4.3.1
   flutter_sticky_header: ^0.6.4
   rxdart: ^0.27.2
   collection: ^1.15.0
